objects/Privileged_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Discount_types__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_types__c</fullName>
        <label>Discount types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bumper-25</fullName>
                </value>
                <value>
                    <fullName>C2C-Free</fullName>
                </value>
                <value>
                    <fullName>Gold-50</fullName>
                </value>
                <value>
                    <fullName>Night out-100</fullName>
                </value>
                <value>
                    <fullName>Top UP-10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mobile services user</description>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Privileged Customer Rebate</label>
        <referenceTo>Privileged_Customer__c</referenceTo>
        <relationshipLabel>PCusts</relationshipLabel>
        <relationshipName>PCusts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Up_discount__c</fullName>
        <description>Privileged mobile customers are eligible for top up rebates</description>
        <label>Top Up discount</label>
        <precision>15</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <label>Privileged Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Privileged Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCusts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>